--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@reactive-dot/core": "^0.38.1",
+    "@reactive-dot/wallet-ledger": "^0.16.31",
+    "@reactive-dot/wallet-mimir": "^0.1.5",
+    "@reactive-dot/wallet-walletconnect": "^0.17.11",
     "@reown/appkit": "^1.6.9",
     "@reown/appkit-adapter-wagmi": "^1.6.9",
     "@tanstack/react-query": "^5.67.2",
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/universal-provider": "^2.19.0",
     "clsx": "^2.1.1",
+    "dot-connect": "^0.17.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
