--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
     "@reactive-dot/wallet-walletconnect": "^0.17.11",
     "@reown/appkit": "^1.6.9",
     "@reown/appkit-adapter-wagmi": "^1.6.9",
+    "@subwallet-connect/core": "^1.0.8",
+    "@subwallet-connect/injected-wallets": "^1.0.8",
+    "@subwallet-connect/subwallet": "^1.0.8",
+    "@subwallet-connect/subwallet-polkadot": "^1.0.8",
     "@tanstack/react-query": "^5.67.2",
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/universal-provider": "^2.19.0",
     "clsx": "^2.1.1",
     "dot-connect": "^0.17.0",
+    "ethers": "^6.13.5",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
